2006-05-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Configure interface to listen on for http streamer.

2006-05-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	  Allow configuring network interface to listen on.

2006-05-16  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/worker.py (PortSet): Pull in from
	flumotion.common.worker.

	* flumotion/common/worker.py (PortSet): Moved here from
	flumotion.worker.worker so that the FSP can use it to track ports
	on a server with multiple workers.

2006-05-15  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	  Add deregisterPrefix method

2006-05-15  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	* flumotion/component/misc/porter/porterclient.py:
	  Allow prefix matching in porter (needs an efficient algorithm)
	  Fix some more fallout from porter move.

2006-05-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/misc/porter/porter.py:
	* flumotion/test/test_porter.py:
	  fix errors caught by pychecker

2006-05-15  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Clean up some deferred stuff.
	  Import the correct module for the porter client.

2006-05-11  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/multi.py (MultiAdminModel.addManager): Allow a
	keycard argument instead of user + auth_cb.

	* flumotion/admin/admin.py (AdminClientFactory.__init__)
	(AdminModel.__init__, _makeFactory, AdminModel.connectToHost)
	(AdminModel.setRemoteReference): Add a bunch of optional arguments
	so that we can login with a user-supplied keycard instead of
	user/pass. Existing programs should still work tho.
